styles/style.css
.page {
  min-width: 1100px;
  /* мы ещё не умеем делать мобильную версию сайта, */
  /* поэтому выше установлена минимальная ширина страницы */
  max-width: 1600px;
  /* выше установили ограничение по максимальной ширине */
  margin: 0 auto;
  /* выше для экранов больше 1600px отцентрировали весь контент */
  font-family: 'Helvetica Neue', Arial, sans-serif;
}

/* logo styles */
.logo {
  z-index: 1;
}

.logo_place_header {
  position: absolute;
  top: 30px;
  left: 64px;
  width: 183px;
  height: 32px;
}

.logo_place_footer {
  width: 183px;
  height: 35px;
}
/* end logo styles */

/* header styles */
.header {
  height: 100vh;
  min-height: 600px;
  max-height: 756px;
  /* выше установили ограничения для секции */
  position: relative;
  background-color: #f2f2f2;
  display: flex;
}

.header__title {
  width: 730px;
  line-height: 96px;
  font-size: 102px;
  font-weight: bold;
  align-self: center;
  margin: 0 0 0 64px;
  z-index: 2;
}

.header__subtitle {
  position: absolute;
  bottom: 30px;
  left: 64px;
  width: 388px;
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
  z-index: 2;
  margin: 0;
}

.header__link {
  text-decoration: none;
  color: #2f80ed;
}

.header__main-illustration {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 765px;
  height: 608px;
  z-index: 1;
}

/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
.header__square-pic {
  position: absolute;
  top: 64px;
  right: 0;
  height: 568px;
  width: 568px;
  background-color: #2f80ed;
}
/* end header styles */

/* description section styles */
.description {
  padding-top: 100px;
}

.two-columns {
  width: 80%;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
}

.two-columns__brief {
  width: 175px;
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  color: #2f80ed;
}

.two-columns__main-text {
  min-width: 784px;
  width: 80%;
}

.two-columns__paragraph, .two-columns__span-accent{
  line-height: 34px;
  font-size: 24px;
}

.two-columns__paragraph {
  font-weight: normal;
  margin: 0 0 30px 0;
}

.two-columns__paragraph:last-child {
  margin-bottom: 0;
}

.two-columns__span-accent {
  font-weight: bold;
}
/* end description section styles */

/* digits section styles */
.digits {
  padding: 100px 0;
}

.section-title {
  line-height: 1.15;
  font-size: 60px;
  font-weight: bold;
  width: 60%;
  text-align: center;
  margin: 0 auto 20px;
}

.section-subtitle {
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
  width: 60%;
  text-align: center;
  margin: 0 auto;
}

.table {
  width: 1100px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  list-style: none;
  padding: 0;
  position: relative;
}

.table__cell {
  margin-top: 60px;
  width: 250px;
}

.table__heading {
  line-height: 1.15;
  font-size: 24px;
  font-weight: bold;
  margin: 0;
}

.table__text {
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  margin: 20px 0 0;
}
/* end digits section styles */

/* feynman section styles */
.feynman {
  position: relative;
  background: url(../images/feynman.png) no-repeat bottom left;
  background-color: #f2f2f2;
  min-height: 790px;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 100px;
}

.feynman__title {
  line-height: 1.15;
  font-size: 120px;
  font-weight: bold;
  width: 648px;
  text-align: center;
  margin: 0 0 70px 0;
}

.feynman__subtitle, .feynman__link {
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
}

.feynman__subtitle {
  margin: 0;
}

.feynman__link {
  position: absolute;
  right: 48px;
  top: 50%;
  text-decoration: none;
  color: #2f80ed;
}
/* end feynman section styles */

/* kaufman section styles */
.kaufman {
  background-color: #1f1f1f;
  padding: 90px 0;
  overflow: hidden;
  position: relative;
  z-index: 1;
}

.section-title_theme_dark,
.section-subtitle_theme_dark,
.table__cell_theme_dark {
  color: #fff;
}

/* и элемента с модификатором вида ключ-значение */
.table__cell_theme_dark {
  margin-top: 80px;
  width: 200px;
}

.kaufman__triangle {
  background-image: url(../images/kaufman-triangle.svg);
  background-size: 877px 877px;
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  right: -210px;
  width: 877px;
  height: 877px;
  z-index: -1;
}
/* end kaufman section styles */

/* footer styles */
.footer {
  background-color: #1f1f1f;
  min-height: 350px;
  display: flex;
  padding: 60px 0 40px;
  box-sizing: border-box;
}

.footer__columns {
  width: 90%;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
}

.footer__column_content_copyright {
  flex-basis: 711px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.footer__author {
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
  color: #fff;
  margin: 18px 0;
}

.footer__column-heading {
  line-height: 30px;
  font-size: 18px;
  font-weight: bold;
  color: #fff;
  margin: 0 0 20px;
}

.footer__column-links {
  display: flex;
  flex-direction: column;
  margin-bottom: 16px;
  padding: 0;
  list-style: none;
}

.footer__column-link {
  text-decoration: none;
  line-height: 30px;
  font-size: 18px;
  font-weight: normal;
  color: #fff;
}

.footer__social-icon {
  width: 16px;
  height: 16px;
  margin-right: 10px;
}
/* end footer styles */

